# rudaux

./: .buildinfo  .gitignore  .style.yapf  CONDUCT.rst  LICENSE  README.md  assignment.py  audit.py  course.py  genindex.html  netlify.toml  objects.inv  pyproject.toml  readme.md  requirements.txt  rudaux_config.json  rudaux_config.yml  search.html  searchindex.js  setup.py  test.py  utils.py
ansible/: .gitignore  Makefile  ansible.cfg  inventory  inventory-ad-hoc  local_vars.yml.example  nginx.yml
ansible_toy/: ansible.cfg  hello.yml  inventory-ad-hoc
content/: 00-preface.html  01-infrastructure.html  02-setting-up-assignments.html  03-running-the-course.html  preface.html
dictauth/: LICENSE  README.md  requirements.txt  setup.py
docs/: Makefile  conf.py  index.html  index.rst  make.bat  modules.rst
jupyterbook/: _config.yml  _toc.yml
monitoring/: dockerevents  dockerstats  monitoring.txt  sysstat
notes/: LITTLEST-JUPYTERHUB-NOTES.md
old_files/: CONTRIBUTING.rst  CONTRIBUTORS.rst  LICENSE  readme.md
rudaux/: LICENSE  README.md  TODO  __init__.py  assignment.py  canvas.py  cli.py  command_line.py  commands.py  config_template.py  container.py  course.py  course_api.py  encrypt_password.py  exceptions.py  flows.py  flows_old.py  grader.py  group.py  jupyterhub.py  lms.py  main.py  manager.py  manager_old.py  monitoring.txt  notification.py  requirements.txt  setup.py  snapshot.py  student.py  submission.py  tasks.py  utils.py
rudaux-archive/: LICENSE  requirements.txt
scripts/: canvas.py  dispatch.py  messages  netstat  nginx  plot_hd.ipynb  sysstat  (+7 more)
(+405 files in other folders)
