[tool.poetry]
name = "rudaux"
version = "0.4.0"
description = "This packages provides automation for managing a course that uses JupyterHub & nbgrader along with a learning management system (e.g., Canvas, EdX)."
authors = ["ttimbers <tiffany.timbers@stat.ubc.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
